--- a/contatti.html
+++ b/contatti.html
@@ -65,7 +65,7 @@
             </div>
         </header>
         <style>
-            body {
+           /* body {
                 margin: 0;
                 padding: 0;
                 min-height: 100vh;
@@ -202,7 +202,7 @@
             .container a {
                 text-decoration: none;
                 color: #414141;
-            }
+            }*/
         </style>
         <div class="container section">
             <div class="card">
