--- a/contatti.html
+++ b/contatti.html
@@ -204,7 +204,7 @@
                 color: #414141;
             }*/
         </style>
-        <div class="container section">
+        <!--<div class="container section">
             <div class="card">
                 <div class="face face1">
                     <div class="content">
@@ -256,7 +256,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>-->
     </body>
 
 </html>
