--- a/newsletter.html
+++ b/newsletter.html
@@ -72,8 +72,8 @@
             </section>
             <section>
                 <div class="wrappernewsletter">
-                    <div class="card"><i class="fa-brands fa-instagram iconaistagram"></i></div>
-                    <div class="card"><i class="fa-brands fa-facebook-f iconafebook"></i></div>
+                    <div class="card"><i class="fa-brands fa-instagram icona"></i></div>
+                    <div class="card"><i class="fa-brands fa-facebook-f icona"></i></div>
                 </div>
             </section>
         </main>
