--- a/documentazione.html
+++ b/documentazione.html
@@ -35,7 +35,6 @@
                                 <li><a class="link allineamento" href="canzoni.html"> canzoni </a></li> 
                                 <li><a class="link allineamento" href="galleria.html">galleria </a></li> 
                                 <li><a class="link allineamento" href="curiosità.html">curiosità</a></li> 
-                                <li><a class="link allineamento" href="contatti.html">contatti</a></li>
                                 <li><a class ="link allineamento" href="newsletter.html"><i class="fa-solid fa-envelope"></i></a></li>
                             </ul>
                         </nav>
@@ -54,10 +53,9 @@
                     </thead>
                 </table>
             </section>
-            <!-- briciole di pane da rimpicciolire -->
             <div id="bricioledipane">
                 <span><a class="link" href="index.html">home</a></span> &gt;
-                <span><a class="link" href="contatti.html">documentazione</a></span> &gt;
+                <span><a class="link" href="documentazione.html">documentazione</a></span> &gt;
             </div>
         </header>
         <p>aaaa</p>
@@ -74,7 +72,6 @@
                             <li><a class="link" href="canzoni.html"> canzoni </a></li> 
                             <li><a class="link" href="galleria.html">galleria </a></li> 
                             <li><a class="link" href="curiosità.html">curiosità</a></li> 
-                            <li><a class="link" href="contatti.html">contatti</a></li>
                             <li><a class ="link" href="newsletter.html"><i class="fa-solid fa-envelope"></i></a></li>
                             <li><a class="link attivo" href="documentazione.html">documentazione <i class="fa-solid fa-file-lines"></i></a></li>                        
                         </ul>
