--- a/canzoni.html
+++ b/canzoni.html
@@ -23,11 +23,14 @@
         <style>
             body{ 
                 margin:0px;
+                background-image: linear-gradient(#144722, antiquewhite);
+                
             }
             .wrappersx{
                 text-align: left;
                 font-family: 'Montserrat', serif;
-                font-weight: 400;        
+                font-weight: 400;  
+                border: 1px antiquewhite;      
             }
             .wrapperdx{
                 text-align: right;
@@ -38,7 +41,7 @@
                 display: inline-bolck;
                 text-decoration: none;
                 padding: 7px 30px;
-                background-color: #f1eeee;
+                background-color: white;
                 border-radius: 100px;
                 color: #111;
                 text-align: right;                
