--- a/newsletter.html
+++ b/newsletter.html
@@ -71,8 +71,9 @@
             </section>
             <section>
                 <div class="wrappernewsletter">
-                    <div class="card"><i class="fa-brands fa-instagram icona"></i></div>
-                    <div class="card"><i class="fa-brands fa-facebook-f icona"></i></div>
+                    <div class="card"><a href="https://www.instagram.com/gorilla_domestico/" target="_blank"><i class="fa-brands fa-instagram icona"></i></a></div>
+                    <div class="card"><a href="https://www.facebook.com/luigi.v.mazzon/photos" target="_blank"><i class="fa-brands fa-facebook-f icona"></i></a></div>
+                    <div class="card"><a href="https://soundcloud.com/search?q=gorilla%20domestico" target="_blank"><i class="fa-brands fa-soundcloud icona"></i></a></div>
                 </div>
             </section>
         </main>
