aggiunto g.a. a tutte le pagine

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <title>Gorilla Domestico</title>
         <!-- ccaratteri speciali -->
         <meta charset="utf-8">
+        <meta name="un cantautore e musicista tutto da scoprire" content="tra storia canzoni foto e curiosità">
+        <meta name="robots" content="index, follow">
         <!-- collegamento Bootstrap -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
@@ -113,7 +115,7 @@
                             <li><a class="link" href="galleria.html">galleria </a></li> 
                             <li><a class="link" href="curiosità.html">curiosità</a></li> 
                             <li><a class ="link" href="newsletter.html"><i class="fa-solid fa-envelope"></i></a></li>
-                            <li><a class="link" href="documentazione.html">documentazione <i class="fa-solid fa-file-lines"></i></a></li>                        
+                            <li><a class="link" href="documentazione.html">doc <i class="fa-solid fa-file-lines"></i></a></li>                        
                         </ul>
                     </nav>
                 </div>
