--- a/curiosità.html
+++ b/curiosità.html
@@ -20,6 +20,14 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+        <!-- Google analytics tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-BPS35ZP44J"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-BPS35ZP44J');
+        </script>
     </head>
     <body class="container-fluid">
         <header class="fixed-top"> 
