--- a/index.html
+++ b/index.html
@@ -111,11 +111,12 @@
                 <div class="col-sm dimtabfooterdx">
                     <nav>
                         <ul>                                 
+                            <li><a class="link" href="documentazione.html">documentazione <i class="fa-solid fa-file-lines"></i></a></li>
                             <li><a class="link" href="canzoni.html"> canzoni </a></li> 
                             <li><a class="link" href="galleria.html">galleria </a></li> 
                             <li><a class="link" href="curiosità.html">curiosità</a></li> 
                             <li><a class ="link" href="newsletter.html"><i class="fa-solid fa-envelope"></i></a></li>
-                            <li><a class="link" href="documentazione.html">doc <i class="fa-solid fa-file-lines"></i></a></li>                        
+                                                    
                         </ul>
                     </nav>
                 </div>
