sistemata pagina curiosità

--- a/curiosità.html
+++ b/curiosità.html
@@ -205,11 +205,11 @@
                 </div>
                 <div class="box">
                     <div class="quesito">
-                        <p aria-hidden="true">Quanto pensi sia talento innato e quanto lavoro in te?
-
+                        <p aria-hidden="true">
+                            Quanto pensi sia talento innato e quanto lavoro in te?
                         </p>
                     </div>
-                    <div class="affermazione"></div>
+                    <div class="affermazione">
                         <p>"Sono sicuro che una predisposizione naturale alla musica ce l'abbiamo 
                             tutti, credo però che ci siano diversi tipi di interesse e di sensibilità che 
                             fanno in modo che una persona cerchi sempre di lavorare in una direzione meno che in un'altra. 
@@ -220,6 +220,11 @@
                         </p>
                     </div>
                 </div>
+                <section>
+                    <p class="section intramezzo">
+                        Scorri il mouse sopra alle domande che abbiamo posto al Gorilla Domestico per scoprire le sue risposte
+                    </p>
+                </section>
             </section>
   
   
