--- a/documentazione.html
+++ b/documentazione.html
@@ -26,30 +26,28 @@
             <section class ="menù">
                 <div class="container">
                     <div class="row">
-                    <div class="col-sm">
-                        <li><a href="index.html"><img id="logo" src="immagini/logo2.png" alt="logo"/></a></li>
-                    </div>
-                    <div class="col-sm">
-                        <nav>
-                            <ul>                             
-                                <li><a class="link allineamento" href="canzoni.html"> canzoni </a></li> 
-                                <li><a class="link allineamento" href="galleria.html">galleria </a></li> 
-                                <li><a class="link allineamento" href="curiosità.html">curiosità</a></li> 
-                                <li><a class ="link allineamento" href="newsletter.html"><i class="fa-solid fa-envelope"></i></a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    
+                        <div class="col-sm">
+                            <li><a href="index.html"><img id="logo" src="immagini/logo2.png" alt="logo"/></a></li>
+                        </div>
+                        <div class="col-sm">
+                            <nav>
+                                <ul>                             
+                                    <li><a class="link allineamento" href="canzoni.html"> canzoni </a></li> 
+                                    <li><a class="link allineamento" href="galleria.html">galleria </a></li> 
+                                    <li><a class="link allineamento" href="curiosità.html">curiosità</a></li> 
+                                    <li><a class ="link allineamento" href="newsletter.html"><i class="fa-solid fa-envelope"></i></a></li>
+                                </ul>
+                            </nav>
+                        </div>
                     </div>
                 </div>
                 <table>
                     <thead>
-                    <tr>
-                        <th scope="col"></th>
-                        <th scope="col">
-                            
-                        </th>
-                    </tr>
+                        <tr>
+                            <th scope="col"></th>
+                            <th scope="col">
+                            </th>
+                        </tr>
                     </thead>
                 </table>
             </section>
@@ -80,3 +78,5 @@
                 </div>
             </div>
         </footer>
+    </body>
+</html>
