--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </section>
             <section class="centrareadestra colore">
                 <p class="allineamentotesto">
-                    Trasferitosi a Milano incomincia a registrare il suo primo album "Lo Spaziale", composto da 6 canzoni indie in cui riesce ad esprimere differenti emozioni.</br>
+                    Trasferitosi a Milano incomincia a registrare il suo primo album "Lo Speziale", composto da 6 canzoni indie in cui riesce ad esprimere differenti emozioni.</br>
                     Tra le note dei suoi testi è anche possibile ascoltare la bellissima voce di Elisabetta Da Rold, la sua ragazza, con la quale condivide da anni questo amore per la musica.
                 </p>
             </section>
