--- a/documentazione.html
+++ b/documentazione.html
@@ -21,7 +21,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     </head>
-    <body class="container-fluid">
+    <body class="container-fluid documentazione">
         <header class="fixed-top">
             <section class ="menù">
                 <div class="container">
@@ -56,7 +56,95 @@
                 <span><a class="link" href="documentazione.html">documentazione</a></span> &gt;
             </div>
         </header>
-        <p>aaaa</p>
+        <section class="section">
+            <h2>Abstract</h2>
+            <p>Ho creato il sito “Gorilla Domestico” con l'obiettivo di promuovere e 
+                far conoscere, tra i giovani che apprezzano l'indie, questo artista emergente 
+                e le sue canzoni, tramite: un breve accenno alla sua vita; le sue canzoni 
+                con i relativi testi; una galleria di immagini mentre canta e non; e 
+                infine con una pagina dedicata alle curiosità che ha rilasciato in esclusiva 
+                per questo sito.
+            </p>
+        </section>
+        <section>
+            <h2>Project Management Plan</h2>
+            <h3>benchmarking</h3>
+            <p>Il progetto si impegna a far conoscere non solo le canzoni, 
+                ma anche il cantautore in sé, perché molto spesso solo quando associamo l'autore alle 
+                sue opere che possiamo effettivamente comprendere la sua arte
+            </p>
+            <p>Il Target: ragazzi tra i 20 e i 35 anni</p>
+            <p>Il primo competitors di questo sito è SoundCloud, dove lo stesso artista ha un account 
+                in cui ha pubblicato le sue canzoni. Il secondo invece è Spotify.</p>
+        </section>
+        <section>
+            <h3>Struttura e layout:</h3>
+            <img class="albero" src="immagini/albero.png.png" alt="immagine albero"/>
+            <img class="wireframe" src="immagini/home.jpeg.jpeg" alt="wireframe home">
+            <img class="wireframe" src="immagini/canzoni.jepg.jpeg" alt="wireframe canzoni">
+            <img class="wireframe" src="immagini/curiosità.jpeg.jpeg" alt="wireframe curiosità">
+            <img class="wireframe" src="immagini/newsletter.jpeg.jpeg" alt="wireframe newslettter">
+            <p>Per quanto riguarda le scelte grafiche ho deciso di mettere come sfondo nella 
+                home un'immagine dell'artista, perché scrollando il testo rivela il suo occhiolino, 
+                simbolo che lo caratterizza e che ripropone in moltissime sue foto. <br>
+                Per i colori invece ho usato: il verde: #144722, l'arancione: #CC5C20, 
+                l'antiquewhite e il nero; cercando di usarli in modi differenti all'interno 
+                delle pagine, ma allo stesso tempo di preservare una certa coerenza tra queste. <br>
+                Le font utilizzate sono: per il logo 29LT Zarid Stencil SemiB e Montserrat regular 
+                e bold per i testi per rendere i titoli e i paragrafi coerenti, puliti e lineari.
+                </p>
+        </section>
+        <section>
+            <h3>Linguaggi e strumenti:</h3>
+            <p>I linguaggi web utilizzati sono: HTML, CSS e JavaScript</p>
+            <p>Strumenti tecnologici utilizzati: Canva per il logo e il favicon; github per 
+                la pubblicazione; codepen.io, html.io, freecodecamp.org  per spunti grafici; 
+                fontawesome per le icone, google font per i font, color.adobe.com per la 
+                scelta dei colori; uizard.io per disegnare il wireframe</p>
+        </section>
+        <section>
+            <h2>Communication strategy</h2>
+            <h3>background</h3>
+            <p>Rispetto ai competitors sopra elencati ho cercato di valorizzare tramite la 
+                home e la pagina curiosità principalmente l'artista, inoltre ho inserito 
+                i testi delle canzoni che non sono presenti su SoundCloud.</p>
+        </section>
+        <section>
+            <h3>Obiettivi comunicativi</h3>
+            <p>L'obiettivo del sito è quello di ottenere: <br>
+                1.  100 visualizzazioni  e 70 nuovi utenti sul  sito mostrando così che 
+                qualcuno sia entrato più volte a vedere il sito. <br> 
+                2.  Inoltre tramite i social mi sono prefissata di ottenere 250 
+                visualizzazioni alla storia promozionale e 10 visualizzazioni al 
+                sito tramite il link posto nella medesima storia.
+                </p>
+        </section>
+        <section>
+            <h3>Target audience e messaggio</h3>
+            <p>Il target a cui si riferisce il sito sono principalmente tutti i ragazzi 
+                tra i 20 e i 35 anni, cioè quel gruppo demografico che sia ancora attaccato 
+                al cantautorato italiano e allo stesso tempo alle canzoni più moderne. 
+                questi sono anche più facilmente raggiungibili tramite instagram. 
+                Il sito però è anche per coloro che apprezzano una tipologia di musica tranquilla 
+                che può accompagnare  in diverse fasi della giornata.</p>
+        </section>
+        <section>
+            <h3>Promozione</h3>
+            <p>La promozione del sito è avvenuta tramite le storie instagram della 
+                sottoscritta e del cantautore che ha prontamente ripostato la 
+                storia e infine su whatsapp.</p>
+        </section>
+        <section>
+            <h3>Valutazione dei risultati</h3>
+            <p>Tramite Google Analytics e gli Insight di instagram sono riuscita 
+                a tenere sotto controllo le visualizzazioni alla storia instagram, e quante 
+                persone hanno visualizzato il sito tramite il link su questa. Oltre alle 
+                visualizzazioni dirette al sito.</p>
+            <p>Per quanto riguarda i primi due obiettivi:</p>
+            <img class="albero" src="immagini/visualizzazioni1.png" alt="visualizzazioni1">
+            <p>Per quanto riguarda il 3 e il 4 obiettivo:</p>
+            <img class="albero" src="immagini/visualizzazioni2.png" alt="visualizzazioni2">
+        </section>
 
         <footer class="footer">
             <div class="container">
