--- a/documentazione.html
+++ b/documentazione.html
@@ -79,9 +79,10 @@
         </section>
         <section>
             <h3>Struttura e layout:</h3>
-            <img class="albero" src="immagini/albero.png.png" alt="immagine albero"/>
+            <img class="albero" src="immagini/albero.png.png" alt="immagine albero"/> <br>
             <img class="wireframe" src="immagini/home.jpeg.jpeg" alt="wireframe home">
             <img class="wireframe" src="immagini/canzoni.jepg.jpeg" alt="wireframe canzoni">
+            <img class="wireframe" src="immagini/galleria.jpeg.jpeg" alt="wireframe galleria">
             <img class="wireframe" src="immagini/curiosità.jpeg.jpeg" alt="wireframe curiosità">
             <img class="wireframe" src="immagini/newsletter.jpeg.jpeg" alt="wireframe newslettter">
             <p>Per quanto riguarda le scelte grafiche ho deciso di mettere come sfondo nella 
@@ -113,7 +114,7 @@
             <h3>Obiettivi comunicativi</h3>
             <p>L'obiettivo del sito è quello di ottenere: <br>
                 1.  100 visualizzazioni  e 70 nuovi utenti sul  sito mostrando così che 
-                qualcuno sia entrato più volte a vedere il sito. <br> 
+                qualcuno sia entrato più volte. <br> 
                 2.  Inoltre tramite i social mi sono prefissata di ottenere 250 
                 visualizzazioni alla storia promozionale e 10 visualizzazioni al 
                 sito tramite il link posto nella medesima storia.
@@ -122,7 +123,7 @@
         <section>
             <h3>Target audience e messaggio</h3>
             <p>Il target a cui si riferisce il sito sono principalmente tutti i ragazzi 
-                tra i 20 e i 35 anni, cioè quel gruppo demografico che sia ancora attaccato 
+                tra i 20 e i 35 anni, cioè quel gruppo demografico che più probabilmente è ancora attaccato 
                 al cantautorato italiano e allo stesso tempo alle canzoni più moderne. 
                 questi sono anche più facilmente raggiungibili tramite instagram. 
                 Il sito però è anche per coloro che apprezzano una tipologia di musica tranquilla 
