sistemato foto documentazione

--- a/documentazione.html
+++ b/documentazione.html
@@ -79,12 +79,12 @@
         </section>
         <section>
             <h3>Struttura e layout:</h3>
-            <img class="albero" src="immagini/albero.png.png" alt="immagine albero"/> <br>
-            <img class="wireframe" src="immagini/home.jpeg.jpeg" alt="wireframe home">
-            <img class="wireframe" src="immagini/canzoni.jepg.jpeg" alt="wireframe canzoni">
-            <img class="wireframe" src="immagini/galleria.jpeg.jpeg" alt="wireframe galleria">
-            <img class="wireframe" src="immagini/curiosità.jpeg.jpeg" alt="wireframe curiosità">
-            <img class="wireframe" src="immagini/newsletter.jpeg.jpeg" alt="wireframe newslettter">
+            <img class="albero" src="immagini/albero.png" alt="immagine albero"/> <br>
+            <img class="wireframe" src="immagini/home.jpeg" alt="wireframe home">
+            <img class="wireframe" src="immagini/canzoni.jpeg" alt="wireframe canzoni">
+            <img class="wireframe" src="immagini/galleria.jpeg" alt="wireframe galleria">
+            <img class="wireframe" src="immagini/curiosità.jpeg" alt="wireframe curiosità">
+            <img class="wireframe" src="immagini/newsletter.jpeg" alt="wireframe newslettter">
             <p>Per quanto riguarda le scelte grafiche ho deciso di mettere come sfondo nella 
                 home un'immagine dell'artista, perché scrollando il testo rivela il suo occhiolino, 
                 simbolo che lo caratterizza e che ripropone in moltissime sue foto. <br>
