--- a/documentazione.html
+++ b/documentazione.html
@@ -83,7 +83,7 @@
             <img class="wireframe" src="immagini/home.jpeg" alt="wireframe home">
             <img class="wireframe" src="immagini/canzoni.jpeg" alt="wireframe canzoni">
             <img class="wireframe" src="immagini/galleria.jpeg" alt="wireframe galleria">
-            <img class="wireframe" src="immagini/curiosità.jpeg" alt="wireframe curiosità">
+            <img class="wireframe" src="immagini/curiosita.jpeg" alt="wireframe curiosità">
             <img class="wireframe" src="immagini/newsletter.jpeg" alt="wireframe newslettter">
             <p>Per quanto riguarda le scelte grafiche ho deciso di mettere come sfondo nella 
                 home un'immagine dell'artista, perché scrollando il testo rivela il suo occhiolino, 
